// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon> Icon refresh default 1`] = `
<svg
  className="fs-icon fs-icon--s"
  data-test="Icon"
  focusable="false"
  role="presentation"
>
  <use
    xlinkHref="spritemap.svg#sprite-refresh"
  />
</svg>
`;

exports[`<Icon> Icon refresh size xl 1`] = `
<svg
  className="fs-icon fs-icon--xl"
  data-test="Icon"
  focusable="false"
  role="presentation"
>
  <use
    xlinkHref="spritemap.svg#sprite-refresh"
  />
</svg>
`;

exports[`<Icon> Icon returns null 1`] = `""`;

exports[`<Icon> Icon search rotation 180 1`] = `
<svg
  className="fs-icon fs-icon--s fs-icon--180"
  data-test="Icon"
  focusable="false"
  role="presentation"
>
  <use
    xlinkHref="spritemap.svg#sprite-search"
  />
</svg>
`;

exports[`<Icon> Icon search rotation 180 size xl 1`] = `
<svg
  className="fs-icon fs-icon--xl fs-icon--180"
  data-test="Icon"
  focusable="false"
  role="presentation"
>
  <use
    xlinkHref="spritemap.svg#sprite-search"
  />
</svg>
`;
